--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div></section>
 
     <section class="slide"><div>
-        <h2>Classes are instance of type</h2>
+        <h2>Classes are instances of type</h2>
         <pre>
             <code class="python">
             >>> isinstance(object, type)
@@ -170,26 +170,32 @@
         </pre>
     </div></section>
 
-    <section class="slide" id="Summary"><div>
-        <h2>Summary</h2>
-        <ol>
-            <li>Everything's an object, and object is synonymous for 
-            instance</li>
-            <li>Classes are instances (objects) of the (meta) class type</li>
-            <li>A subclass of type is a metaclass</li>
-        </ol>
-        <img src="pictures/summary.svg" alt="Summary">
+    <section class="slide" id="Object-Model-1"><div>
+        <h2>Every Class Is A Subclass Of object</h2>
+        <img src="pictures/objmodel_1.svg" alt="Object Model Diagram 1">
         <style>
-            #Summary img {
-                margin-top:-30px;
+            #Object-Model-1 img {
+                margin-top:0px;
                 margin-left:-20px;
-                width: 34em;
+                width: 32em;
+            }
+        </style>
+    </div></section>
+
+    <section class="slide" id="Object-Model-2"><div>
+        <h2>Why Are Classes Instances Of object</h2>
+        <img src="pictures/objmodel_2.svg" alt="Object Model Diagram 2">
+        <style>
+            #Object-Model-2 img {
+                margin-top:0px;
+                margin-left:-20px;
+                width: 32em;
             }
         </style>
     </div></section>
 
     <section class="slide" id="Diagram"><div>
-        <h2>Object Model Diagram</h2>
+        <h2>Python's Object Model Diagram</h2>
         <img src="pictures/objmodel.svg" alt="Object Model Diagram">
         <style>
             #Diagram img {
@@ -201,13 +207,17 @@
     </div></section>
 
     <section class="slide"><div>
-        <h2>Class And Non-Class Objects</h2>
-        <ol>
-            <li>Everything's an object, and object is synonymous for 
-            instance</li>
-            <li>Classes are instances (objects) of the (meta) class type</li>
-            <li>A subclass of type is a metaclass</li>
-        </ol>
+        <h2>Esempio di istanza che non ha attributo della classe</h2>
+        <ul>
+            <li>...</li>
+        </ul>
+    </div></section>
+
+    <section class="slide"><div>
+        <h2>Classes, Non-Classes And Metaclasses</h2>
+        <ul>
+            <li>Descriptors, distinguere nel lookup...</li>
+        </ul>
     </div></section>
 
     <div class="progress"><div></div></div>
